--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -68,6 +68,9 @@
     <dimen name="size_24sp">24sp</dimen>
     // 2458
     <dimen name="size_6dp">6dp</dimen>
+    <dimen name="size_33dp">33dp</dimen>
+    // 2527
+    <dimen name="size_1000dp">1000dp</dimen>
 
 
 </resources>
