--- a/app/src/main/res/layout/fragment_time_slots.xml
+++ b/app/src/main/res/layout/fragment_time_slots.xml
@@ -3,28 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="timeslotsfragmentViewModel"
+            type="com.smf.events.ui.schedulemanagement.ScheduleManagementViewModel" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/size_15dp"
+        android:layout_marginEnd="@dimen/size_15dp"
         android:orientation="vertical"
         tools:context=".ui.timeslot.TimeSlotsFragment">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_50dp"
+            android:layout_height="@dimen/size_35dp"
+            app:tabBackground="@drawable/tab_selector"
             app:tabGravity="fill"
-            app:tabIndicator="@drawable/tab_indicator"
             app:tabIndicatorAnimationMode="elastic"
+            app:tabIndicatorColor="@color/background_gray"
             app:tabIndicatorGravity="stretch"
             app:tabMode="fixed"
             app:tabSelectedTextColor="@color/black"
-            tools:ignore="SpeakableTextPresentCheck" />
+            app:tabTextAppearance="@style/CustomTextAppearance" />
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager2"
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/size_20dp" />
 
     </LinearLayout>
 
