--- a/app/src/main/res/layout/time_slot_list.xml
+++ b/app/src/main/res/layout/time_slot_list.xml
@@ -4,17 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/time_slot_list_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/view1"
         android:layout_width="@dimen/size_3dp"
         android:layout_height="@dimen/dp_0"
-        android:layout_marginStart="@dimen/size_15dp"
+        android:layout_marginStart="@dimen/size_33dp"
         android:background="@color/buttoncolor"
         app:layout_constraintBottom_toTopOf="@+id/layout_linear_12_3am"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +20,8 @@
         android:id="@+id/layout_linear_12_3am"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/size_20dp"
+        android:layout_marginStart="@dimen/size_20dp"
+        android:layout_marginTop="@dimen/size_30dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,8 +33,8 @@
 
             <ImageView
                 android:id="@+id/image_view_12_3am"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +55,7 @@
 
         <TextView
             android:id="@+id/time_slot_12_3am"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
@@ -81,6 +80,7 @@
         android:id="@+id/layout_linear_3_6am"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,8 +92,8 @@
 
             <ImageView
                 android:id="@+id/image_view_3_6am"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
 
         <TextView
             android:id="@+id/time_slot_3_6am"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
@@ -139,6 +139,7 @@
         android:id="@+id/layout_linear_6_9am"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,8 +151,8 @@
 
             <ImageView
                 android:id="@+id/image_view_6_9am"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -172,7 +173,7 @@
 
         <TextView
             android:id="@+id/time_slot_6_9am"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
@@ -197,6 +198,7 @@
         android:id="@+id/layout_linear_9_12pm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -208,8 +210,8 @@
 
             <ImageView
                 android:id="@+id/image_view_9_12pm"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -230,7 +232,7 @@
 
         <TextView
             android:id="@+id/time_slot_9_12pm"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
@@ -255,6 +257,7 @@
         android:id="@+id/layout_linear_12_3pm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -266,8 +269,8 @@
 
             <ImageView
                 android:id="@+id/image_view_12_3pm"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -288,7 +291,7 @@
 
         <TextView
             android:id="@+id/time_slot_12_3pm"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
@@ -313,6 +316,7 @@
         android:id="@+id/layout_linear_3_6pm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -324,8 +328,8 @@
 
             <ImageView
                 android:id="@+id/image_view_3_6pm"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -346,7 +350,7 @@
 
         <TextView
             android:id="@+id/time_slot_3_6pm"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
@@ -371,6 +375,7 @@
         android:id="@+id/layout_linear_6_9pm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -382,8 +387,8 @@
 
             <ImageView
                 android:id="@+id/image_view_6_9pm"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -404,7 +409,7 @@
 
         <TextView
             android:id="@+id/time_slot_6_9pm"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
@@ -429,6 +434,7 @@
         android:id="@+id/layout_linear_9_12am"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_20dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -440,8 +446,8 @@
 
             <ImageView
                 android:id="@+id/image_view_9_12am"
-                android:layout_width="@dimen/size_35dp"
-                android:layout_height="@dimen/size_35dp"
+                android:layout_width="@dimen/size_30dp"
+                android:layout_height="@dimen/size_30dp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/select"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -452,7 +458,7 @@
 
         <TextView
             android:id="@+id/time_slot_9_12am"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_10dp"
             android:layout_marginTop="@dimen/size_5dp"
