--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -71,6 +71,9 @@
     <dimen name="size_33dp">33dp</dimen>
     // 2527
     <dimen name="size_1000dp">1000dp</dimen>
+    //2528
+    <dimen name="size_180dp">180dp</dimen>
+    <dimen name="size_210">210dp</dimen>
 
 
 </resources>
