--- a/app/src/main/res/drawable/arrow_btn_shape.xml
+++ b/app/src/main/res/drawable/arrow_btn_shape.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-
     <solid android:color="@color/white" />
     <size
-        android:height="10dp"
-        android:width="10dp"/>
+        android:width="@dimen/size_10dp"
+        android:height="@dimen/size_10dp" />
     <stroke
-        android:width="0.5dp"
+        android:width="@dimen/size_1dp"
         android:color="@color/gray"/>
-
 </shape>
