--- a/app/src/main/res/drawable/arrow_forward_20.xml
+++ b/app/src/main/res/drawable/arrow_forward_20.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
+    android:width="@dimen/size_20dp"
+    android:height="@dimen/size_20dp"
     android:autoMirrored="true"
-    android:tint="#030303"
+    android:tint="@color/black"
     android:viewportWidth="30"
     android:viewportHeight="30">
     <path
