--- a/app/src/main/res/drawable/calendar_background.xml
+++ b/app/src/main/res/drawable/calendar_background.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="2dp"
+        android:width="@dimen/size_2dp"
         android:color="@color/background_gray" />
     <solid android:color="@color/white" />
     <corners android:radius="@dimen/size_5dp" />
-    />
 
 </shape>
