--- a/app/src/main/res/drawable/circle_fade.xml
+++ b/app/src/main/res/drawable/circle_fade.xml
@@ -1,8 +1,8 @@
-<vector android:height="20dp"
-    android:tint="#999797"
+<vector android:width="@dimen/size_20dp"
+    android:height="@dimen/size_20dp"
     android:viewportHeight="24"
     android:viewportWidth="24"
-    android:width="20dp"
+    android:tint="@color/circle_gray"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
         android:fillColor="@android:color/white"
