--- a/app/src/main/res/drawable/circle_fade_35.xml
+++ b/app/src/main/res/drawable/circle_fade_35.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="35dp"
-    android:height="35dp"
-    android:tint="#999797"
+    android:width="@dimen/size_35dp"
+    android:height="@dimen/size_35dp"
+    android:tint="@color/circle_gray"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
