--- a/app/src/main/res/drawable/custom_button_edge.xml
+++ b/app/src/main/res/drawable/custom_button_edge.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:width="1dp"
+        android:width="@dimen/size_1dp"
         android:color="@color/buttoncolor" />
-    <solid android:color="#F4F2F2" />
+    <solid android:color="@color/white" />
     <corners android:radius="@dimen/size_5dp"/>
 </shape>
