--- a/app/src/main/res/drawable/custom_button_round_corner.xml
+++ b/app/src/main/res/drawable/custom_button_round_corner.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid android:color="@color/button_blue" />
-    <corners android:radius="50dp" />
+    <corners android:radius="@dimen/size_50dp" />
     <stroke
         android:width="@dimen/size_1dp"
         android:color="@color/buttoncolor" />
