--- a/app/src/main/res/drawable/dashboard_new_service_shape.xml
+++ b/app/src/main/res/drawable/dashboard_new_service_shape.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <solid android:color="@color/gray" />
-    <corners android:radius="8dp" />
+    <corners android:radius="@dimen/size_8dp" />
 
 </shape>
