--- a/app/src/main/res/drawable/empty_shapes.xml
+++ b/app/src/main/res/drawable/empty_shapes.xml
@@ -2,11 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <stroke
-        android:width="0dp"
+        android:width="@dimen/dp_0"
         android:color="@color/white" />
 
     <solid android:color="@color/white" />
-
-    />
 
 </shape>
