--- a/app/src/main/res/drawable/week_selection_right.xml
+++ b/app/src/main/res/drawable/week_selection_right.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Border -->
     <item>
@@ -8,13 +6,13 @@
             <corners
                 android:bottomRightRadius="@dimen/size_10dp"
                 android:topRightRadius="@dimen/size_10dp" />
-            <solid android:color="#999797"></solid>
+            <solid android:color="@color/circle_gray"></solid>
         </shape>
     </item><!-- Body -->
     <item
-        android:bottom="2dp"
-        android:right="2dp"
-        android:top="2dp">
+        android:bottom="@dimen/size_2dp"
+        android:right="@dimen/size_2dp"
+        android:top="@dimen/size_2dp">
         <shape>
             <corners
                 android:bottomRightRadius="@dimen/size_10dp"
@@ -22,19 +20,4 @@
             <solid android:color="@color/white"></solid>
         </shape>
     </item>
-
 </layer-list>
-
-    <!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
-    <!--    <item >-->
-    <!--        <shape android:shape="rectangle">-->
-    <!--            <size android:width="@dimen/size_100dp"-->
-    <!--                android:height="@dimen/size_48dp"/>-->
-    <!--            <stroke android:width="@dimen/size_1dp"-->
-    <!--                android:color="@color/background_gray"/>-->
-    <!--            <corners android:bottomRightRadius="@dimen/size_10dp"-->
-    <!--                android:topRightRadius="@dimen/size_10dp"/>-->
-    <!--            <solid android:color="@color/white"/>-->
-    <!--        </shape>-->
-    <!--    </item>-->
-    <!--</selector>-->
