Task - 2558(Booked Event Time Slot Api's Integration(New Json Format))
- Added time_slot_bottom.xml file for expandedList inside last view.
- Added time_slot_title_collapse.xml file for expandableList title with collapse state view.
- Inside CustomExpandableListAdapter.kt implemented new data based on api json format.
- Removed ExpandableListData.kt file.
- Inside fragment_time_slots_expandable_list.xml changed divider height 10dp to 0dp.
- ListData.kt file updated based on new api Json.
- Inside ScheduleManagementViewModel.kt added liveData for current Date.
- Inside TimeSlotsFragment.kt and TimeSlotsExpandableListFragment.kt implemented sharedViewModel.
- time_slot_list.xml and time_slot_title.xml changed variable dp based on new api implementation.

--- a/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
+++ b/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
@@ -19,8 +19,9 @@
             android:layout_height="@dimen/size_1000dp"
             android:childDivider="@color/white"
             android:divider="@color/white"
-            android:dividerHeight="@dimen/size_10dp"
-            android:groupIndicator="@null"/>
+            android:dividerHeight="@dimen/dp_0"
+            android:groupIndicator="@null"
+            android:scrollbars="none" />
 
     </RelativeLayout>
 
