--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="size_28dp">28dp</dimen>
     <dimen name="size_30dp">30dp</dimen>
     <dimen name="size_32dp">32dp</dimen>
+    <dimen name="size_34dp">34dp</dimen>
     <dimen name="size_40dp">40dp</dimen>
     <dimen name="size_35dp">35dp</dimen>
     <dimen name="size_48dp">48dp</dimen>
