--- a/app/src/main/res/layout/time_slot_title_collapse.xml
+++ b/app/src/main/res/layout/time_slot_title_collapse.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/size_10dp"
     android:background="@color/white"
     android:orientation="vertical">
 
