--- a/app/src/main/res/layout/time_slot_list.xml
+++ b/app/src/main/res/layout/time_slot_list.xml
@@ -77,4 +77,18 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/text_no_events_available"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/size_40dp"
+        android:paddingBottom="@dimen/size_40dp"
+        android:text="@string/no_events_available"
+        android:textSize="@dimen/size_15sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
