--- a/app/src/main/res/layout/time_slot_title_collapse.xml
+++ b/app/src/main/res/layout/time_slot_title_collapse.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/expandable_title_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/size_10dp"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/size_10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/expandable_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/time_slot_custom_layout"
