--- a/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
+++ b/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
@@ -23,6 +23,16 @@
             android:groupIndicator="@null"
             android:scrollbars="none" />
 
+        <TextView
+            android:id="@+id/no_events_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textSize="@dimen/size_15sp"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/size_80dp"
+            android:text="@string/no_events_available" />
+
     </RelativeLayout>
 
 </layout>
