TASK - 2803 Deselecting and Modify Dialog
Note:-
Deselecting and Modify Dialog are created in same custom Dialog Fragment

-Added logical for previous day in CalendarFragment.kt
-Added Dialog Injection in ActivityBuilder.kt
-Implemented the dialog show in CalendarFragment.kt
-Added colour as per the visual frame work design
-Added the dimens.xml for the dialog fragment
-Added the String in the strings.xml
-Added custom_button design for ok and cancel
-Added the custom listview xml file for modify dialog
-Added and implemented logics for the modify dialog list view
-Added and implemented DeselectedDialogFragment
-Added and Module
 implemented DeselectedDialogFragment
 -Added and implemented DeselectedDialogFragmentViewmodel
 -Added and implemented ListData dataclass

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,5 +27,8 @@
     <color name="circle_outer_border">#C6C6C6</color>
     <color name="calendar_background">#494444</color>
     <color name="calendar_border_darl_gray">#605D5D</color>
+    // 2803
+    <color name="pairing_theme">#FF3577</color>
+    <color name="pairing_theme_fade">#F9649D</color>
 
 </resources>
